crates/coral-cli/tests/snapshots/snapshot_cli__export_html_head_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
expression: head
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Coral wiki</title>
<style>:root { --fg: #1a1a1a; --bg: #fff; --muted: #6a6a6a; --link: #0366d6; --code-bg: #f4f4f4; --border: #ddd; }@media (prefers-color-scheme: dark) { :root { --fg: #e6e6e6; --bg: #161616; --muted: #888; --link: #58a6ff; --code-bg: #222; --border: #333; } }* { box-sizing: border-box; }body { margin: 0; font: 16px/1.55 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; color: var(--fg); background: var(--bg); }.site-header { padding: 24px; border-bottom: 1px solid var(--border); }.site-header h1 { margin: 0 0 4px 0; font-size: 22px; }.site-header p { margin: 0; color: var(--muted); font-size: 13px; }main { display: grid; grid-template-columns: 260px 1fr; max-width: 1400px; margin: 0 auto; }nav.toc { padding: 24px; border-right: 1px solid var(--border); position: sticky; top: 0; max-height: 100vh; overflow-y: auto; }nav.toc h2 { margin: 0 0 12px 0; font-size: 14px; text-transform: uppercase; color: var(--muted); }nav.toc details { margin-bottom: 8px; }nav.toc summary { cursor: pointer; font-weight: 600; font-size: 14px; padding: 4px 0; }nav.toc ul { list-style: none; margin: 0; padding-left: 12px; }nav.toc li { padding: 2px 0; font-size: 13px; }nav.toc a { color: var(--link); text-decoration: none; }nav.toc a:hover { text-decoration: underline; }article { padding: 24px 32px; min-width: 0; }section.page { margin-bottom: 48px; padding-bottom: 24px; border-bottom: 1px solid var(--border); }section.page header h1 { margin: 0 0 4px 0; }section.page header .meta { margin: 0 0 16px 0; color: var(--muted); font-size: 13px; }section.page .body :first-child { margin-top: 0; }code { background: var(--code-bg); padding: 1px 5px; border-radius: 3px; font-size: 0.9em; }pre { background: var(--code-bg); padding: 12px; border-radius: 4px; overflow-x: auto; }pre code { background: none; padding: 0; }a { color: var(--link); }table { border-collapse: collapse; margin: 12px 0; }table th, table td { border: 1px solid var(--border); padding: 6px 12px; text-align: left; }@media (max-width: 800px) { main { grid-template-columns: 1fr; } nav.toc { position: static; max-height: none; border-right: none; border-bottom: 1px solid var(--border); } }</style>
</head>
<body>
<header class="site-header"><h1>Coral wiki</h1>
  <p>4 pages · generated by <code>coral export --format html</code></p></header>
<main>
<nav class="toc">
<h2>Pages</h2>
<details open><summary>concept (2)</summary>
<ul>
<li><a href="#idempotency">idempotency</a></li>
<li><a href="#outbox">outbox</a></li>
</ul>
</details>
<details open><summary>flow (1)</summary>
<ul>
<li><a href="#checkout-flow">checkout-flow</a></li>
</ul>
</details>
<details open><summary>module (1)</summary>
<ul>
<li><a href="#order">order</a></li>
</ul>
</details>
</nav>
    <article>
<section id="idempotency" class="page page-concept">
  <header><h1>idempotency</h1>
  <p class="meta">type: <code>concept</code> · status: <code>draft</code> · confidence: <code>0.50</code> · last_commit: <code>[COMMIT_SHA]</code></p></header>
  <div class="body"><h1>Idempotency</h1>
<p>A re-submitted request must produce the same observable result as the
first. Implemented via request-id deduplication.</p>
</div>
</section>
<section id="outbox" class="page page-concept">
  <header><h1>outbox</h1>
  <p class="meta">type: <code>concept</code> · status: <code>verified</code> · confidence: <code>0.90</code> · last_commit: <code>[COMMIT_SHA]</code></p></header>
  <div class="body"><h1>Outbox pattern</h1>
<p>Guarantees at-least-once delivery by writing intent to a local outbox
table inside the same database transaction as the business write. A
background dispatcher polls the outbox and emits to the message bus.</p>
<p>Used by <a href="#order">order</a> to publish OrderCreated events.</p>
</div>
</section>
<section id="checkout-flow" class="page page-flow">
  <header><h1>checkout-flow</h1>
  <p class="meta">type: <code>flow</code> · status: <code>reviewed</code> · confidence: <code>0.70</code> · last_commit: <code>[COMMIT_SHA]</code></p></header>
  <div class="body"><h1>Checkout flow</h1>
<p>End-to-end: cart → payment → <a href="#order">order</a>. Spans 3 services. The order
service uses <a href="#outbox">outbox</a> for the OrderCreated event downstream.</p>
</div>
</section>
<section id="order" class="page page-module">
  <header><h1>order</h1>
