crates/coral-cli/tests/snapshots/snapshot_cli__export_markdown_bundle_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
expression: stdout
---
# Wiki bundle

Generated by `coral export --format markdown-bundle`.

---

## idempotency (concept)

_status: draft, confidence: 0.50_

# Idempotency

A re-submitted request must produce the same observable result as the
first. Implemented via request-id deduplication.

---

## outbox (concept)

_status: verified, confidence: 0.90_

# Outbox pattern

Guarantees at-least-once delivery by writing intent to a local outbox
table inside the same database transaction as the business write. A
background dispatcher polls the outbox and emits to the message bus.

Used by [[order]] to publish OrderCreated events.

---

## checkout-flow (flow)

_status: reviewed, confidence: 0.70_

# Checkout flow

End-to-end: cart → payment → [[order]]. Spans 3 services. The order
service uses [[outbox]] for the OrderCreated event downstream.

---

## order (module)

_status: reviewed, confidence: 0.85_

# Order

Order creation flow. Receives POST /orders, validates, persists via the
[[outbox]] pattern, returns 202.

See [[checkout-flow]] for end-to-end behavior.

---
