crates/coral-cli/tests/snapshots/snapshot_cli__history_outbox_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
expression: stdout
---
No log entries mention 'outbox'.
