crates/coral-cli/tests/snapshots/snapshot_cli__lint_fix_dry_run_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
assertion_line: 451
expression: stdout
---
# Lint report

- 🚨 Critical: 0
- ⚠️ Warning: 5
- ℹ️ Info: 0

## ⚠️ Warning

- **LowConfidence** in `.wiki/concepts/idempotency.md`: Confidence 0.5 below threshold 0.6
- **OrphanPage** in `.wiki/concepts/idempotency.md`: Page 'idempotency' has no inbound backlinks
- **SourceNotFound** in `.wiki/concepts/outbox.md`: Source path 'src/outbox/dispatcher.rs' for page 'outbox' not found on disk
  Context: src/outbox/dispatcher.rs
- **SourceNotFound** in `.wiki/flows/checkout-flow.md`: Source path 'src/checkout/saga.rs' for page 'checkout-flow' not found on disk
  Context: src/checkout/saga.rs
- **SourceNotFound** in `.wiki/modules/order.md`: Source path 'src/order/handler.rs' for page 'order' not found on disk
  Context: src/order/handler.rs



# No-LLM lint fixes (dry-run)

- `checkout-flow` (.wiki/flows/checkout-flow.md): confidence-from-coverage
- `order` (.wiki/modules/order.md): confidence-from-coverage
- `outbox` (.wiki/concepts/outbox.md): confidence-from-coverage

3 page(s) would change. Pass `--apply` to write.
