crates/coral-cli/tests/snapshots/snapshot_cli__lint_json_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
expression: stdout
---
{
  "issues": [
    {
      "code": "low_confidence",
      "severity": "warning",
      "page": ".wiki/concepts/idempotency.md",
      "message": "Confidence 0.5 below threshold 0.6",
      "context": null
    },
    {
      "code": "orphan_page",
      "severity": "warning",
      "page": ".wiki/concepts/idempotency.md",
      "message": "Page 'idempotency' has no inbound backlinks",
      "context": null
    },
    {
      "code": "source_not_found",
      "severity": "warning",
      "page": ".wiki/concepts/outbox.md",
      "message": "Source path 'src/outbox/dispatcher.rs' for page 'outbox' not found on disk",
      "context": "src/outbox/dispatcher.rs"
    },
    {
      "code": "source_not_found",
      "severity": "warning",
      "page": ".wiki/flows/checkout-flow.md",
      "message": "Source path 'src/checkout/saga.rs' for page 'checkout-flow' not found on disk",
      "context": "src/checkout/saga.rs"
    },
    {
      "code": "source_not_found",
      "severity": "warning",
      "page": ".wiki/modules/order.md",
      "message": "Source path 'src/order/handler.rs' for page 'order' not found on disk",
      "context": "src/order/handler.rs"
    }
  ]
}
