crates/coral-cli/tests/snapshots/snapshot_cli__lint_structural_4_page_seed.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
expression: stdout
---
# Lint report

- 🚨 Critical: 0
- ⚠️ Warning: 5
- ℹ️ Info: 0

## ⚠️ Warning

- **LowConfidence** in `.wiki/concepts/idempotency.md`: Confidence 0.5 below threshold 0.6
- **OrphanPage** in `.wiki/concepts/idempotency.md`: Page 'idempotency' has no inbound backlinks
- **SourceNotFound** in `.wiki/concepts/outbox.md`: Source path 'src/outbox/dispatcher.rs' for page 'outbox' not found on disk
  Context: src/outbox/dispatcher.rs
- **SourceNotFound** in `.wiki/flows/checkout-flow.md`: Source path 'src/checkout/saga.rs' for page 'checkout-flow' not found on disk
  Context: src/checkout/saga.rs
- **SourceNotFound** in `.wiki/modules/order.md`: Source path 'src/order/handler.rs' for page 'order' not found on disk
  Context: src/order/handler.rs
