crates/coral-cli/tests/snapshots/snapshot_cli__search_outbox_dispatcher_bm25.snap
---
source: crates/coral-cli/tests/snapshot_cli.rs
assertion_line: 271
expression: stdout
---
# Search results for: outbox dispatcher

- **[[outbox]]** (score: 1.614)
  # Outbox pattern

Guarantees at-least-once delivery by writing intent to a local outbox
table inside the same database transaction as the business write. A
background dispatcher polls the outbox and e

- **[[checkout-flow]]** (score: 0.383)
  ns 3 services. The order
service uses [[outbox]] for the OrderCreated event downstream.

- **[[order]]** (score: 0.359)
  /orders, validates, persists via the
[[outbox]] pattern, returns 202.

See [[checkout-flow]] for end-to-end behavior.


_(Offline bm25 ranking. Pass `--algorithm hybrid` for best results, `bm25` or `tfidf` for single-ranker, or `--engine embeddings` for semantic search.)_
